# NBody2D

./: CMakeLists.txt  README.md
include/: Body.h  Node.h  Quad.h  Quadtree.h  Renderer.h  Simulation.h  Utils.h  Vec2.h  body.h  simulation.h
src/: Quad.cpp  Quadtree.cpp  Renderer.cpp  Simulation.cpp  body.cpp  main.cpp  simulation.cpp
